# anki-auto

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
examples/: .env.example  blacklist.example.txt  customization.example.txt  items.example.txt
src/anki_auto/: __init__.py  anki.py  audio.py  cli.py  config.py  logging_utils.py  models.py  openai_cards.py  options.py  prompt.py  prompt_files.py
tests/: factories.py  test_anki.py  test_audio.py  test_cli.py  test_config.py  test_logging.py  test_prompt.py  test_prompt_files.py  test_smoke.py
