[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-auto"
version = "0.1.0"
description = "Automation for Anki card creation and modifications"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "liav-hasson" }]
requires-python = ">=3.10"
keywords = ["anki", "flashcards", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/liav-hasson/anki-auto"
"Bug Tracker" = "https://github.com/liav-hasson/anki-auto/issues"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["anki_auto"]

# ---------------------------------------------------------------------------
# Mypy (type checker)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=anki_auto --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
