[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-auto"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
	"genanki",
	"openai>=1.40",
	"pydantic",
	"pydantic-settings",
]

[project.optional-dependencies]
dev = [
	"pylint",
	"pytest",
	"ruff",
]

[project.scripts]
anki-auto = "anki_auto.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
