[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-auto"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
	"genanki>=0.13,<1",
	"openai>=2.44,<3",
	"pydantic>=2.13,<3",
	"pydantic-settings>=2.14,<3",
]

[project.optional-dependencies]
dev = [
	"pylint",
	"pytest",
	"ruff",
]

[project.scripts]
anki-auto = "anki_auto.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "anki_auto.__version__"}
